--- a/GeometryTunes/GeometryTunes/GeometryTunes-Info.plist
+++ b/GeometryTunes/GeometryTunes/GeometryTunes-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFiles</key>
 	<array/>
 	<key>CFBundleIdentifier</key>
-	<string>edu.tufts.eecs.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>edu.tufts.cs.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
